# VRP-GYM-extension

./: README.md  evaluation_reproduction.csv  experiments.ipynb  experiments_santa_DQN.ipynb  experiments_sdp.ipynb  experiments_sdp2.ipynb  experiments_sdp3.ipynb  experiments_sdp4.ipynb  experiments_sdp5.ipynb  experiments_sdp6_rnn.ipynb  loss_log.csv  pyproject.toml  reproduction.ipynb  reproduction.py  santa_DQN.py  train_models.py
agents/: __init__.py  ff_sdp_agent.py  ff_tsp_agent.py  graph_decoder.py  graph_irp_agent.py  random_agent.py  rnn_sdp_agent.py
check_points/santa_ff_10_23/: model_epoch_100.pt  model_epoch_150.pt  model_epoch_200.pt  model_epoch_250.pt  model_epoch_50.pt
check_points/santa_ff_12_23/: model_epoch_100.pt  model_epoch_150.pt  model_epoch_200.pt  model_epoch_250.pt  model_epoch_300.pt  model_epoch_350.pt  (+5 more)
train_logs/: loss_log_santa_ff_10_123.csv  loss_log_santa_ff_10_23.csv  loss_log_santa_ff_12_23.csv  loss_log_santa_ff_15_123.csv  loss_log_santa_ff_20_123.csv  loss_log_santa_ff_24_23.csv  loss_log_santa_ff_30_123.csv  loss_log_santa_ff_3_123.csv  loss_log_santa_ff_5_123.csv  loss_log_santa_ff_6_123.csv  loss_log_santa_ff_7_123.csv  loss_log_santa_ff_7_23.csv  loss_log_santa_irp_10_23.csv  loss_log_santa_irp_12_23.csv  loss_log_santa_irp_20_69.csv  loss_log_santa_irp_40_23.csv  loss_log_santa_irp_5_23.csv  loss_log_santa_irp_6_23.csv  loss_log_santa_rnn_10_123.csv  loss_log_santa_rnn_15_123.csv  loss_log_santa_rnn_3_123.csv  loss_log_santa_rnn_5_123.csv  loss_log_santa_rnn_7_123.csv  loss_log_tsp_20_69.csv  loss_log_tsp_5_23.csv
(+60 files in other folders)
