[tool.poetry]
name = "sdp-gym"
version = "0.1.0"
description = "Santa delivery problem environment"
authors = ["Finlay Duff"]
readme = "README.md"
packages = [{include = "sdp_gym"}]

[tool.poetry.dependencies]
python = "^3.9"
gym = "^0.26.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
torch = "^2.1.2"
networkx = "^3.2.1"
pandas = "^2.1.4"
plotly = "^5.18.0"
moviepy = "^1.0.3"
ffmpeg = "^1.4"
imageio-ffmpeg = "^0.4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
